# -ADIP-Project-LViT

./: .gitignore  install note.txt  pyproject.toml  requirements.txt  requirements_no_version.txt
Docs/: main.tex
Docs/Chapter/: chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  title.tex
Slide/: main.aux  main.bbl  main.bcf  main.fdb_latexmk  main.fls  main.nav  main.out  main.run.xml  main.tex  main.toc  references.bib
Slide/sections/: 1. introduction.tex  2. related-works.tex  3. methodology.tex  4. implementation  4. implementation.tex  5. conclusion.tex
Source code/: Config.py  Load_Dataset.py  README.md  Train_one_epoch.py  note_structure.ods  test_bert.py  test_find_key.py  test_test_excel.py  test_text.py  test_val_excel.py  test_val_id_excel.py  test_val_keys.py  train_model.py  utils.py
Source code/nets/: LViT.py  UNet.py  Vit.py
