[project]
name = "do-an"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "ml-collections>=1.1.0",
    "numpy>=2.5.0",
    "opencv-python>=4.13.0.92",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pillow>=12.2.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
    "tensorboardx>=2.6.5",
    "thop>=0.1.1.post2209072238",
    "timm>=1.0.27",
    "torch>=2.5.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.27.1",
    "tqdm>=4.68.3",
    "transformers>=5.12.1",
]
